{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 16,
  "lineage": "7f4a1f96-00b0-d34b-8c4e-baa50dec1478",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:296062592493:instance/i-00c38e723f26ec2b5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c38e723f26ec2b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c249bb9a91c1541",
            "private_dns": "ip-10-0-0-214.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ed9fb02fb126191c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03071b20b55c58310",
            "tags": {
              "Environment": "dev",
              "Name": "Ec2-module"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Ec2-module"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "single-instance"
            },
            "vpc_security_group_ids": [
              "sg-0a96bd599584eeaa4"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.ec2-instance.aws_iam_instance_profile.this",
            "module.ec2-instance.aws_iam_role.this",
            "module.ec2-instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance.data.aws_partition.current",
            "module.ec2-instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:296062592493:network-acl/acl-0ee62658ac1bd0e57",
            "default_network_acl_id": "acl-0ee62658ac1bd0e57",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ee62658ac1bd0e57",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "296062592493",
            "subnet_ids": [
              "subnet-03071b20b55c58310",
              "subnet-070ebdf9e3e78ada2"
            ],
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0fee1606baa89c8d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:296062592493:route-table/rtb-0f40623ddae560164",
            "default_route_table_id": "rtb-0f40623ddae560164",
            "id": "rtb-0f40623ddae560164",
            "owner_id": "296062592493",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fee1606baa89c8d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:296062592493:security-group/sg-0a96bd599584eeaa4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a96bd599584eeaa4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "296062592493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0fee1606baa89c8d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:296062592493:internet-gateway/igw-043f87c08b49bbd32",
            "id": "igw-043f87c08b49bbd32",
            "owner_id": "296062592493",
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0fee1606baa89c8d2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-043f87c08b49bbd32",
            "id": "r-rtb-051e636f93cefb5fd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051e636f93cefb5fd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:296062592493:route-table/rtb-02397464571542653",
            "id": "rtb-02397464571542653",
            "owner_id": "296062592493",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fee1606baa89c8d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:296062592493:route-table/rtb-051e636f93cefb5fd",
            "id": "rtb-051e636f93cefb5fd",
            "owner_id": "296062592493",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043f87c08b49bbd32",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fee1606baa89c8d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8d6024b2be83b6b",
            "route_table_id": "rtb-02397464571542653",
            "subnet_id": "subnet-070ebdf9e3e78ada2"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029e61a729165ff0a",
            "route_table_id": "rtb-051e636f93cefb5fd",
            "subnet_id": "subnet-03071b20b55c58310"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:296062592493:subnet/subnet-070ebdf9e3e78ada2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070ebdf9e3e78ada2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296062592493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0fee1606baa89c8d2"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:296062592493:subnet/subnet-03071b20b55c58310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03071b20b55c58310",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296062592493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            },
            "vpc_id": "vpc-0fee1606baa89c8d2"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:296062592493:vpc/vpc-0fee1606baa89c8d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee62658ac1bd0e57",
            "default_route_table_id": "rtb-0f40623ddae560164",
            "default_security_group_id": "sg-0a96bd599584eeaa4",
            "dhcp_options_id": "dopt-0ad6fb07107e44b7f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fee1606baa89c8d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f40623ddae560164",
            "owner_id": "296062592493",
            "tags": {
              "Name": "test-vpc-module"
            },
            "tags_all": {
              "Name": "test-vpc-module"
            }
          }
        }
      ]
    }
  ]
}